--- a/index.html
+++ b/index.html
@@ -613,6 +613,9 @@
         .features-container {
           margin-top: 10rem;
         }
+        .main-banner{
+          height: 450px;
+        }
       }
     </style>
   </head>
